Fix navigation not showing properly on iPad

--- a/source/stylesheets/core.scss
+++ b/source/stylesheets/core.scss
@@ -110,9 +110,9 @@ header {
                      margin-top: 48px;
                  }
 
-                 @media only screen and (min-width: 40.063em) and (max-width: 50em) {
+                /* @media only screen and (min-width: 40.063em) and (max-width: 50em) {
                      margin-top: -19px;
-                 }
+                 }*/
     }
 
 
